[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "letterjoy-cipher-tool"
version = "0.1.0"
description = "CLI tool for encoding and decoding Letterjoy subscription ciphers"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
letterjoy = "letterjoy.cli:main"
